--- a/index.html
+++ b/index.html
@@ -1,128 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Simple Browser FPS</title>
-<style>
-  body { margin:0; overflow:hidden; }
-  canvas { display:block; width:100vw; height:100vh; background:#87ceeb; }
-  .crosshair {
-    position:absolute;
-    top:50%; left:50%;
-    width:10px; height:10px;
-    margin-left:-5px; margin-top:-5px;
-    border:2px solid black;
-    border-radius:50%;
-    pointer-events:none;
-  }
-</style>
+    <meta charset="UTF-8">
+    <title>FPS Shooter</title>
+    <style>
+        body { margin: 0; overflow: hidden; background: black; }
+        #startScreen {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: #000d;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 32px;
+            cursor: pointer;
+            z-index: 10;
+        }
+        #crosshair {
+            position: absolute;
+            top: 50%; left: 50%;
+            width: 12px; height: 12px;
+            margin-left: -6px; margin-top: -6px;
+            border: 2px solid white;
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 5;
+        }
+    </style>
 </head>
 <body>
-<canvas id="gameCanvas"></canvas>
-<div class="crosshair"></div>
+    <div id="startScreen">CLICK TO START</div>
+    <div id="crosshair"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/controls/PointerLockControls.js"></script>
-<script>
-// ======= Three.js Setup =======
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-const renderer = new THREE.WebGLRenderer({canvas: document.getElementById('gameCanvas')});
-renderer.setSize(window.innerWidth, window.innerHeight);
+    <!-- Three.js from CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r155/three.min.js"></script>
 
-// ===== Lighting =====
-const light = new THREE.DirectionalLight(0xffffff, 1);
-light.position.set(5,10,7);
-scene.add(light);
-scene.add(new THREE.AmbientLight(0x404040));
+    <script>
+    let scene, camera, renderer;
+    let moveForward = false, moveBackward = false, moveLeft = false, moveRight = false;
+    let controlsEnabled = false;
+    let objects = [];
 
-// ===== Ground =====
-const groundGeo = new THREE.BoxGeometry(100,1,100);
-const groundMat = new THREE.MeshPhongMaterial({color:0x228B22});
-const ground = new THREE.Mesh(groundGeo, groundMat);
-ground.position.y = -0.5;
-scene.add(ground);
+    const startScreen = document.getElementById("startScreen");
 
-// ===== Controls =====
-const controls = new THREE.PointerLockControls(camera, document.body);
-document.body.addEventListener('click',()=>controls.lock(), false);
-camera.position.y = 1.6;
+    function init() {
+        scene = new THREE.Scene();
+        scene.background = new THREE.Color(0x202020);
 
-let moveForward=false, moveBackward=false, moveLeft=false, moveRight=false;
-const velocity = new THREE.Vector3();
-const direction = new THREE.Vector3();
-const speed = 5;
+        camera = new THREE.PerspectiveCamera(
+            75, window.innerWidth / window.innerHeight, 1, 2000
+        );
 
-document.addEventListener('keydown', (e)=>{
-  if(e.code==='KeyW') moveForward=true;
-  if(e.code==='KeyS') moveBackward=true;
-  if(e.code==='KeyA') moveLeft=true;
-  if(e.code==='KeyD') moveRight=true;
-});
-document.addEventListener('keyup', (e)=>{
-  if(e.code==='KeyW') moveForward=false;
-  if(e.code==='KeyS') moveBackward=false;
-  if(e.code==='KeyA') moveLeft=false;
-  if(e.code==='KeyD') moveRight=false;
-});
+        renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
 
-// ===== Gun =====
-const gunGeo = new THREE.BoxGeometry(0.2,0.2,1);
-const gunMat = new THREE.MeshPhongMaterial({color:0x555555});
-const gun = new THREE.Mesh(gunGeo, gunMat);
-gun.position.set(0,-0.2,-0.5);
-camera.add(gun);
+        // Floor
+        let floor = new THREE.Mesh(
+            new THREE.PlaneGeometry(400, 400),
+            new THREE.MeshPhongMaterial({ color: 0x444444 })
+        );
+        floor.rotation.x = -Math.PI / 2;
+        scene.add(floor);
 
-// ===== Enemies =====
-const enemies = [];
-const enemyGeo = new THREE.BoxGeometry(1,1,1);
-const enemyMat = new THREE.MeshPhongMaterial({color:0xff0000});
-for(let i=0;i<5;i++){
-  const enemy = new THREE.Mesh(enemyGeo, enemyMat);
-  enemy.position.set(Math.random()*20-10,0.5,Math.random()*20-10);
-  scene.add(enemy);
-  enemies.push(enemy);
-}
+        // Lighting
+        const light = new THREE.DirectionalLight(0xffffff, 1);
+        light.position.set(50, 100, 50);
+        scene.add(light);
 
-// ===== Shooting =====
-document.addEventListener('mousedown', shoot);
-function shoot(){
-  const raycaster = new THREE.Raycaster();
-  raycaster.setFromCamera(new THREE.Vector2(0,0), camera);
-  const intersects = raycaster.intersectObjects(enemies);
-  intersects.forEach((enemy)=>{
-    scene.remove(enemy);
-    enemies.splice(enemies.indexOf(enemy),1);
-  });
-}
+        // Controls start on click
+        startScreen.onclick = () => {
+            startScreen.style.display = "none";
+            document.body.requestPointerLock();
+        };
 
-// ===== Animation Loop =====
-const clock = new THREE.Clock();
-function animate(){
-  requestAnimationFrame(animate);
-  const delta = clock.getDelta();
-  velocity.x -= velocity.x*10.0*delta;
-  velocity.z -= velocity.z*10.0*delta;
-  direction.z = Number(moveForward)-Number(moveBackward);
-  direction.x = Number(moveRight)-Number(moveLeft);
-  direction.normalize();
-  if(moveForward||moveBackward) velocity.z -= direction.z*speed*delta;
-  if(moveLeft||moveRight) velocity.x -= direction.x*speed*delta;
-  controls.moveRight(-velocity.x);
-  controls.moveForward(-velocity.z);
+        document.addEventListener("pointerlockchange", () => {
+            controlsEnabled = document.pointerLockElement === document.body;
+        });
 
-  // Enemy follow player
-  enemies.forEach(enemy=>{
-    const dir = new THREE.Vector3().subVectors(camera.position, enemy.position);
-    dir.y=0; dir.normalize();
-    enemy.position.add(dir.multiplyScalar(1*delta));
-  });
+        // Mouse look
+        document.addEventListener("mousemove", (e) => {
+            if (!controlsEnabled) return;
+            camera.rotation.y -= e.movementX * 0.002;
+            camera.rotation.x -= e.movementY * 0.002;
+            camera.rotation.x = Math.max(-1.4, Math.min(1.4, camera.rotation.x));
+        });
 
-  renderer.render(scene, camera);
-}console.log('Camera position:', camera.position);
-console.log('Enemies positions:', enemies.map(e => e.position));
+        // WASD
+        document.addEventListener("keydown", (e) => {
+            if (e.code === "KeyW") moveForward = true;
+            if (e.code === "KeyS") moveBackward = true;
+            if (e.code === "KeyA") moveLeft = true;
+            if (e.code === "KeyD") moveRight = true;
+        });
 
-animate();
-</script>
+        document.addEventListener("keyup", (e) => {
+            if (e.code === "KeyW") moveForward = false;
+            if (e.code === "KeyS") moveBackward = false;
+            if (e.code === "KeyA") moveLeft = false;
+            if (e.code === "KeyD") moveRight = false;
+        });
+
+        // Shooting
+        document.addEventListener("mousedown", shoot);
+
+        spawnTargets();
+        animate();
+    }
+
+    function spawnTargets() {
+        const geo = new THREE.BoxGeometry(3, 3, 3);
+        const mat = new THREE.MeshPhongMaterial({ color: 0xff3333 });
+
+        for (let i = 0; i < 15; i++) {
+            let box = new THREE.Mesh(geo, mat.clone());
+            box.position.set(
+                Math.random() * 200 - 100,
+                1.5,
+                Math.random() * 200 - 100
+            );
+            scene.add(box);
+            objects.push(box);
+        }
+    }
+
+    function shoot() {
+        if (!controlsEnabled) return;
+
+        const ray = new THREE.Raycaster();
+        ray.setFromCamera(new THREE.Vector2(0, 0), camera);
+        const hit = ray.intersectObjects(objects);
+
+        if (hit.length > 0) {
+            let obj = hit[0].object;
+            scene.remove(obj);
+            objects = objects.filter(o => o !== obj);
+        }
+    }
+
+    function animate() {
+        requestAnimationFrame(animate);
+
+        if (controlsEnabled) {
+            const speed = 0.3;
+
+            if (moveForward) {
+                camera.position.x -= Math.sin(camera.rotation.y) * speed;
+                camera.position.z -= Math.cos(camera.rotation.y) * speed;
+            }
+            if (moveBackward) {
+                camera.position.x += Math.sin(camera.rotation.y) * speed;
+                camera.position.z += Math.cos(camera.rotation.y) * speed;
+            }
+            if (moveLeft) {
+                camera.position.x -= Math.cos(camera.rotation.y) * speed;
+                camera.position.z += Math.sin(camera.rotation.y) * speed;
+            }
+            if (moveRight) {
+                camera.position.x += Math.cos(camera.rotation.y) * speed;
+                camera.position.z -= Math.sin(camera.rotation.y) * speed;
+            }
+        }
+
+        renderer.render(scene, camera);
+    }
+
+    init();
+    </script>
 </body>
 </html>
